--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     /> -->
-        <meta
-            name="viewport"
-            content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
-        />
+        <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
         <meta name="theme-color" content="#000000" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -26,7 +23,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>React App</title>
+        <meta
+            name="description"
+            content="Calculate tip, split and save the bill, and keep track of who has or hasn't paid yet."
+        />
+        <title>My Chowculator</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
